--- a/Reinforcement learning tutorial.ipynb
+++ b/Reinforcement learning tutorial.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,24 +35,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[41mS\u001b[0mFFF\n",
+      "FHFH\n",
+      "FFFH\n",
+      "HFFG\n"
+     ]
+    }
+   ],
    "source": [
     "env.render()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100-th Score over time: 0.0\n",
+      "200-th Score over time: 0.0\n",
+      "300-th Score over time: 0.04\n",
+      "400-th Score over time: 0.0\n",
+      "500-th Score over time: 0.13\n",
+      "600-th Score over time: 0.49\n",
+      "700-th Score over time: 0.39\n",
+      "800-th Score over time: 0.39\n",
+      "900-th Score over time: 0.42\n",
+      "1000-th Score over time: 0.38\n",
+      "1100-th Score over time: 0.46\n",
+      "1200-th Score over time: 0.37\n",
+      "1300-th Score over time: 0.41\n",
+      "1400-th Score over time: 0.39\n",
+      "1500-th Score over time: 0.36\n",
+      "1600-th Score over time: 0.48\n",
+      "1700-th Score over time: 0.41\n",
+      "1800-th Score over time: 0.46\n",
+      "1900-th Score over time: 0.36\n",
+      "2000-th Score over time: 0.4\n",
+      "2100-th Score over time: 0.43\n",
+      "2200-th Score over time: 0.46\n",
+      "2300-th Score over time: 0.43\n",
+      "2400-th Score over time: 0.37\n",
+      "2500-th Score over time: 0.33\n",
+      "2600-th Score over time: 0.37\n",
+      "2700-th Score over time: 0.34\n",
+      "2800-th Score over time: 0.37\n",
+      "2900-th Score over time: 0.38\n",
+      "3000-th Score over time: 0.5\n",
+      "3100-th Score over time: 0.41\n",
+      "3200-th Score over time: 0.45\n",
+      "3300-th Score over time: 0.44\n",
+      "3400-th Score over time: 0.52\n",
+      "3500-th Score over time: 0.51\n",
+      "3600-th Score over time: 0.45\n",
+      "3700-th Score over time: 0.43\n",
+      "3800-th Score over time: 0.38\n",
+      "3900-th Score over time: 0.35\n",
+      "4000-th Score over time: 0.35\n",
+      "4100-th Score over time: 0.47\n",
+      "4200-th Score over time: 0.38\n",
+      "4300-th Score over time: 0.42\n",
+      "4400-th Score over time: 0.33\n",
+      "4500-th Score over time: 0.44\n",
+      "4600-th Score over time: 0.36\n",
+      "4700-th Score over time: 0.41\n",
+      "4800-th Score over time: 0.41\n",
+      "4900-th Score over time: 0.47\n",
+      "5000-th Score over time: 0.41\n",
+      "5100-th Score over time: 0.38\n",
+      "5200-th Score over time: 0.48\n",
+      "5300-th Score over time: 0.46\n",
+      "5400-th Score over time: 0.48\n",
+      "5500-th Score over time: 0.47\n",
+      "5600-th Score over time: 0.54\n",
+      "5700-th Score over time: 0.5\n",
+      "5800-th Score over time: 0.39\n",
+      "5900-th Score over time: 0.43\n",
+      "6000-th Score over time: 0.35\n",
+      "6100-th Score over time: 0.44\n",
+      "6200-th Score over time: 0.37\n",
+      "6300-th Score over time: 0.41\n",
+      "6400-th Score over time: 0.39\n",
+      "6500-th Score over time: 0.5\n",
+      "6600-th Score over time: 0.44\n",
+      "6700-th Score over time: 0.43\n",
+      "6800-th Score over time: 0.46\n",
+      "6900-th Score over time: 0.41\n",
+      "7000-th Score over time: 0.48\n",
+      "7100-th Score over time: 0.41\n",
+      "7200-th Score over time: 0.42\n",
+      "7300-th Score over time: 0.43\n",
+      "7400-th Score over time: 0.47\n",
+      "7500-th Score over time: 0.37\n",
+      "7600-th Score over time: 0.39\n",
+      "7700-th Score over time: 0.5\n",
+      "7800-th Score over time: 0.34\n",
+      "7900-th Score over time: 0.4\n",
+      "8000-th Score over time: 0.37\n",
+      "8100-th Score over time: 0.48\n",
+      "8200-th Score over time: 0.42\n",
+      "8300-th Score over time: 0.55\n",
+      "8400-th Score over time: 0.4\n",
+      "8500-th Score over time: 0.33\n",
+      "8600-th Score over time: 0.36\n",
+      "8700-th Score over time: 0.35\n",
+      "8800-th Score over time: 0.39\n",
+      "8900-th Score over time: 0.3\n",
+      "9000-th Score over time: 0.24\n",
+      "9100-th Score over time: 0.39\n",
+      "9200-th Score over time: 0.46\n",
+      "9300-th Score over time: 0.39\n",
+      "9400-th Score over time: 0.42\n",
+      "9500-th Score over time: 0.36\n",
+      "9600-th Score over time: 0.4\n",
+      "9700-th Score over time: 0.46\n",
+      "9800-th Score over time: 0.46\n",
+      "9900-th Score over time: 0.43\n"
+     ]
+    }
+   ],
    "source": [
     "#Initialize table with all zeros\n",
     "Q = np.zeros([env.observation_space.n,env.action_space.n])\n",
     "# Set learning parameters\n",
-    "lr = .8\n",
-    "y = .95\n",
+    "lr = .8 #learning rate\n",
+    "y = .95 #gamma\n",
     "num_episodes = 10000\n",
     "#create lists to contain total rewards and steps per episode\n",
     "#jList = []\n",
@@ -85,21 +203,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score over time: 0.3955\n"
+     ]
+    }
+   ],
    "source": [
-    "print \"Score over time: \" +  str(sum(rList)/num_episodes)"
+    "print(\"Score over time: \" +  str(sum(rList)/num_episodes))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Q-Table Values\n",
+      "[[2.22060341e-03 2.11174752e-03 2.61828239e-02 2.33961087e-03]\n",
+      " [6.24791927e-04 9.56195598e-04 1.96770142e-04 8.74026430e-03]\n",
+      " [4.49906655e-04 4.55861462e-04 6.40634550e-04 2.61848760e-03]\n",
+      " [6.76243488e-05 3.32217027e-05 1.24281826e-04 2.33264017e-03]\n",
+      " [9.57568451e-02 5.48614459e-04 1.14366697e-03 4.18397962e-04]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
+      " [1.17977057e-05 1.52086506e-06 3.71590053e-03 9.21536861e-05]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
+      " [4.17155249e-04 3.85500997e-06 5.87860627e-04 2.76028704e-01]\n",
+      " [2.61123035e-04 2.28089205e-01 1.67722703e-05 6.52498742e-04]\n",
+      " [5.34412967e-01 1.16248333e-04 0.00000000e+00 5.66672654e-05]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]\n",
+      " [4.19448100e-04 2.41125438e-04 2.24913788e-01 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 9.11350077e-01]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
-    "print \"Final Q-Table Values\"\n",
-    "print Q"
+    "print(\"Final Q-Table Values\")\n",
+    "print(Q)"
    ]
   },
   {
@@ -118,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,24 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2018-02-04 22:20:59,880] Making new env: FrozenLake-v0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = gym.make('FrozenLake-v0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,9 +319,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/hukim/.virtualenvs/tf1.4p3/lib/python3.5/site-packages/tensorflow/python/util/tf_should_use.py:107: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n",
+      "100-th Score over time: 0.01\n",
+      "200-th Score over time: 0.03\n",
+      "300-th Score over time: 0.03\n",
+      "400-th Score over time: 0.05\n",
+      "500-th Score over time: 0.12\n",
+      "600-th Score over time: 0.33\n",
+      "700-th Score over time: 0.33\n",
+      "800-th Score over time: 0.52\n",
+      "900-th Score over time: 0.54\n",
+      "1000-th Score over time: 0.46\n",
+      "1100-th Score over time: 0.46\n",
+      "1200-th Score over time: 0.62\n",
+      "1300-th Score over time: 0.66\n",
+      "1400-th Score over time: 0.57\n",
+      "1500-th Score over time: 0.53\n",
+      "1600-th Score over time: 0.65\n",
+      "1700-th Score over time: 0.57\n",
+      "1800-th Score over time: 0.32\n",
+      "1900-th Score over time: 0.65\n",
+      "2000-th Score over time: 0.63\n",
+      "2100-th Score over time: 0.62\n",
+      "2200-th Score over time: 0.64\n",
+      "2300-th Score over time: 0.57\n",
+      "2400-th Score over time: 0.69\n",
+      "2500-th Score over time: 0.74\n",
+      "2600-th Score over time: 0.53\n",
+      "2700-th Score over time: 0.72\n",
+      "2800-th Score over time: 0.57\n",
+      "2900-th Score over time: 0.75\n",
+      "3000-th Score over time: 0.63\n",
+      "3100-th Score over time: 0.65\n",
+      "3200-th Score over time: 0.65\n",
+      "3300-th Score over time: 0.65\n",
+      "3400-th Score over time: 0.68\n",
+      "3500-th Score over time: 0.64\n",
+      "3600-th Score over time: 0.67\n",
+      "3700-th Score over time: 0.68\n",
+      "3800-th Score over time: 0.63\n",
+      "3900-th Score over time: 0.68\n",
+      "4000-th Score over time: 0.74\n",
+      "4100-th Score over time: 0.69\n",
+      "4200-th Score over time: 0.51\n",
+      "4300-th Score over time: 0.7\n",
+      "4400-th Score over time: 0.7\n",
+      "4500-th Score over time: 0.72\n",
+      "4600-th Score over time: 0.69\n",
+      "4700-th Score over time: 0.78\n",
+      "4800-th Score over time: 0.69\n",
+      "4900-th Score over time: 0.72\n",
+      "5000-th Score over time: 0.59\n",
+      "5100-th Score over time: 0.58\n",
+      "5200-th Score over time: 0.72\n",
+      "5300-th Score over time: 0.69\n",
+      "5400-th Score over time: 0.67\n",
+      "5500-th Score over time: 0.77\n",
+      "5600-th Score over time: 0.71\n",
+      "5700-th Score over time: 0.73\n",
+      "5800-th Score over time: 0.55\n",
+      "5900-th Score over time: 0.76\n",
+      "6000-th Score over time: 0.69\n",
+      "6100-th Score over time: 0.78\n",
+      "6200-th Score over time: 0.62\n",
+      "6300-th Score over time: 0.69\n",
+      "6400-th Score over time: 0.81\n",
+      "6500-th Score over time: 0.56\n",
+      "6600-th Score over time: 0.67\n",
+      "6700-th Score over time: 0.68\n",
+      "6800-th Score over time: 0.63\n",
+      "6900-th Score over time: 0.7\n",
+      "7000-th Score over time: 0.72\n",
+      "7100-th Score over time: 0.71\n",
+      "7200-th Score over time: 0.59\n",
+      "7300-th Score over time: 0.68\n",
+      "7400-th Score over time: 0.68\n",
+      "7500-th Score over time: 0.63\n",
+      "7600-th Score over time: 0.66\n",
+      "7700-th Score over time: 0.77\n",
+      "7800-th Score over time: 0.53\n",
+      "7900-th Score over time: 0.76\n",
+      "8000-th Score over time: 0.63\n",
+      "8100-th Score over time: 0.72\n",
+      "8200-th Score over time: 0.72\n",
+      "8300-th Score over time: 0.68\n",
+      "8400-th Score over time: 0.7\n",
+      "8500-th Score over time: 0.68\n",
+      "8600-th Score over time: 0.63\n",
+      "8700-th Score over time: 0.69\n",
+      "8800-th Score over time: 0.65\n",
+      "8900-th Score over time: 0.72\n",
+      "9000-th Score over time: 0.63\n",
+      "9100-th Score over time: 0.69\n",
+      "9200-th Score over time: 0.53\n",
+      "9300-th Score over time: 0.7\n",
+      "9400-th Score over time: 0.67\n",
+      "9500-th Score over time: 0.68\n",
+      "9600-th Score over time: 0.66\n",
+      "9700-th Score over time: 0.64\n",
+      "9800-th Score over time: 0.67\n",
+      "9900-th Score over time: 0.77\n"
+     ]
+    }
+   ],
    "source": [
     "init = tf.initialize_all_variables()\n",
     "\n",
@@ -258,21 +509,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf1.2cp27",
+   "display_name": "tf1.4p3",
    "language": "python",
-   "name": "tf1.2cp27"
+   "name": "tf1.4p3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
